# Hackathon2024

./: .env  Cargo.toml
data/: database.db
migrations/: 001_create_dummy_data.sql
src/: main.rs  request_port.sh  start.sh
